--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@ngrx/store": "7.4.0",
     "@ngrx/store-devtools": "7.4.0",
     "core-js": "^2.5.4",
+    "firebase": "5.10.1",
     "jquery": "3.4.0",
     "ngrx": "2.0.1",
     "rxjs": "~6.3.3",
+    "short-uuid": "3.1.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
