Improve build script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "money-calculator",
   "version": "0.0.0",
+  "config": {
+    "surgeProject": "overconfident-mailbox.surge.sh"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +11,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build && surge dist/money-calculator"
+    "deploy": "ng build && surge dist/money-calculator $npm_package_config_surgeProject"
   },
   "private": true,
   "dependencies": {
