--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "dev": "ng serve --configuration hmr",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build && surge dist/money-calculator $npm_package_config_surgeProject"
+    "deploy": "npm run build:prod && surge dist/money-calculator $npm_package_config_surgeProject"
   },
   "private": true,
   "dependencies": {
@@ -40,11 +42,12 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@angularclass/hmr": "2.1.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "3.3.29",
     "@types/node": "~8.9.4",
     "@types/semantic-ui": "2.2.7",
-    "@types/jquery": "3.3.29",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
